2003-06-19  Sam Steingold  <sds@gnu.org>

	* type.lisp (canonicalize-type): canonicalize (VECTOR NIL) correctly

2003-06-19  Sam Steingold  <sds@gnu.org>

	added (SETF WEAK-POINTER-VALUE)
	* spvw_garcol.d (gar_col_normal): when the value of the weak
	pointer is GC-invariant, remove it from O(all_weakpointers)
	* lispbibl.d (weakpointer_broken_p): depend on wp_value (not wp_cdr)
	* record.d (mk_weakpointer): wp_cdr for GC-invariant values is unbound
	(MAKE-WEAK-POINTER, WEAK-POINTER-P, WEAK-POINTER-VALUE): fixed seclass
	(check_weak_pointer): new function
	(WEAK-POINTER-VALUE): use it
	(%SET-WEAK-POINTER-VALUE): implemented
	* constsym.d, subr.d (set_weak_pointer_value): added
	* places.lisp (WEAK-POINTER-VALUE): added defsetf

2003-06-15  Sam Steingold  <sds@gnu.org>

	* spvw.d (main) [WIN32_NATIVE]: permit `-K'
	clisp-link.sh now works on mingw

2003-06-13  Sam Steingold  <sds@gnu.org>

	* stream.d (make_file_stream): do not push :PROBE streams onto
	O(open_files) because that would prevent deleting this file and
	:PROBE streams do not have to be closed anyway

2003-06-13  Sam Steingold  <sds@gnu.org>

	* makemake.in [win32gcc]: build lisp.a on mingw and do stage
	comparison (make check) unix-style, not dos-style
	* configure [cygwin/mingw]: work around the _WinMain@16 libcharset
	problem with --enable-shared=no;  this is a FIXME for Bruno

2003-06-13  Sam Steingold  <sds@gnu.org>

	* pathname.d (TrueName) [WIN32_NATIVE]: return bool; made global;
	fixed a bug with overwriting "nameout" string with "resolved"
	(cpslashp): new macro, used throughout the file
	* spvw_memfile.d (loadmem) [WIN32_NATIVE]: use TrueName() to
	resolve possible symbolic links
	* lispbibl.d (TrueName): added a prototype

2003-06-12  Sam Steingold  <sds@gnu.org>

	* makemake.in: on win32gcc, translate /cygdrive/ prefixes to the
	normal win32 pathnames (so that clisp.exe would work properly)
	(stage): use the same check for defining ${LN_S} to copy and