@@ -414,9 +414,10 @@ to print the corresponding values, or T for all of them.")
               (simple-array-p obj) rank)
       (when (eql rank 1)
         (format stream (TEXT " (vector)")))
-      (unless (eq eltype 'T)
-        (format stream (TEXT " of ~(~A~)s")
-                eltype))
+      (case eltype
+        ((T))
+        ((NIL) (write-string (TEXT " with no storage") stream))
+        (OTHERWISE (format stream (TEXT " of ~As") eltype)))
       (when (adjustable-array-p obj)
         (format stream (TEXT ", adjustable")))
       (when (plusp rank)
